# SimpleRenderer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Camera.cpp  Camera.h  Console.cpp  Console.h  Core.cpp  Core.h  IInputSystem.h  IRenderer.h  IRendererSystem.h  IWindowSystem.h  InputSystem.cpp  InputSystem.h  Math.cpp  Math.h  Object.cpp  Object.h  Primitives.cpp  Primitives.h  RenderThreadPool.cpp  RenderThreadPool.h  Renderer.cpp  Renderer.h  RendererSystem.cpp  RendererSystem.h  System.h  Window.cpp  Window.h  WindowSystem.cpp  WindowSystem.h  Windowing.cpp  Windowing.h  WndProc.cpp  WndProc.h  main.cpp  pch.h
